implement view tasks

--- a/website/templates/create_task.html
+++ b/website/templates/create_task.html
@@ -25,19 +25,19 @@
             class="form-control" 
             id="frequency" 
             name="frequency" 
-            placeholder="Enter task frequency"
+            placeholder="Enter task frequency (Weekly, Monthly)"
             required>
     </div>
     
-    <!-- Group ID Field -->
+    <!-- Group Name Field -->
     <div class="form-group">
-        <label for="group_id">Group ID</label>
+        <label for="group_name">Group Name</label>
         <input 
-            type="number"
+            type="text"
             class="form-control" 
-            id="group_id" 
-            name="group_id" 
-            placeholder="Enter group ID"
+            id="group_name" 
+            name="group_name" 
+            placeholder="Enter group Name"
             required>
     </div>
     
