--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -3,5 +3,10 @@
 {% block content %}
 <h1 This is Home Page>
     <!-- Add buttons to navigate to other pages in this block -->
+<div>
+    <button type="button" class="btn">Create New Task</button>
+    <button type="button" class="btn">View New Tasks</button>
+    <button type="button" class="btn">Generate Schedule</button>
+</div>  
 </h1>
 {% endblock %}
