change color of base

--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -16,7 +16,7 @@
     />
     <style>
         .navbar-custom {
-            background-color: #faaa8e;
+            background-color: #a08679;
         }
     </style>
     <title>{% block title %}Home{% endblock %}</title>
