join_group changes

--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -7,4 +7,7 @@
     <a href="{{ url_for('group.create_group') }}">
         <button>Create Group</button>
     </a>
+    <a href="{{ url_for('group.join_group') }}">
+        <button>Join Group</button>
+    </a>
 {% endblock %}
