Implement allocate task,  success

--- a/website/templates/task_allocation.html
+++ b/website/templates/task_allocation.html
@@ -26,7 +26,8 @@
                     <option value="Monthly">Monthly</option>
                 </select>
             </div>
-            <button type="submit" class="btn btn-primary">Allocate Tasks</button>
+            <button type="submit" name="action" value="view_allocated" class="btn btn-primary">View Your Allocated Tasks</button>
+            <button type="submit" name="action" value="view_all" class="btn btn-primary">View All Tasks</button>
         </form>
     </div>
 {% endblock %}
