--- a/website/static/createTasks.css
+++ b/website/static/createTasks.css
@@ -24,12 +24,12 @@ body {
 .form-container {
     text-align: center;
     margin: 40px auto;
-    background-color: #fff; /* White background for form for contrast */
+    background-color: #fff;
     padding: 30px;
     border-radius: 8px;
     box-shadow: 0px 6px 14px rgba(0, 0, 0, 0.1);
     width: 60%;
-    border: 1px solid #d3bfa7; /* Light brown border for a cute look */
+    border: 1px solid #d3bfa7; 
 }
 
 .form-group {
