--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -1,10 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    
-    <!-- External Stylesheets -->
     <link
         rel="stylesheet"
         href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
@@ -16,20 +14,17 @@
         href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
         crossorigin="anonymous"
     />
-    
+
+    <!-- Link to style CSS file -->
+    <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
     <style>
         .navbar-custom {
-            background-color: #5c3c0e;
+            background-color: #5b3e31;
         }
     </style>
-    
-    <title>{% block title %}Home{% endblock %}</title>
-    
-    <!-- Block for additional CSS -->
     {% block extra_css %}{% endblock %}
+    <title>{% block title %}Home{% endblock %}</title>
 </head>
-</html>
-
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark navbar-custom">
         <button 
@@ -48,9 +43,9 @@
                 {% if user.is_authenticated %}
                 <a class="nav-item nav-link" id="home" href="/">Home</a>
                 <a class="nav-item nav-link" id="logout" href="/logout">Logout</a>
-                <a class="nav-item nav-link" id="create_task" href="{{url_for('task.create_task')}}">Create Task</a>
+                <a class="nav-item nav-link" id="create_task" href="{{ url_for('task.create_task') }}">Create Task</a>
                 <a class="nav-item nav-link" id="view-tasks" href="{{ url_for('task.view_tasks') }}">View Tasks</a>
-                <a class="nav-item nav-link" id="allocate-task", href="{{url_for('task.allocate_tasks')}}">Allocate Tasks</a>
+                <a class="nav-item nav-link" id="allocate-task" href="{{ url_for('task.allocate_tasks') }}">Allocate Tasks</a>
                 {% else %}
                 <a class="nav-item nav-link" id="login" href="/login">Login</a>
                 <a class="nav-item nav-link" id="signUp" href="/sign-up">Sign Up</a>
