--- a/website/templates/create_task.html
+++ b/website/templates/create_task.html
@@ -1,8 +1,9 @@
 {% extends "base.html" %}
-{% block title %}Create task{% endblock %}
+
+{% block title %}Create Task{% endblock %}
 
 {% block extra_css %}
-    <link rel="stylesheet" href="{{ url_for('static', filename='createTasks.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='createtasks.css') }}">
 {% endblock %}
 
 {% block content %}
