--- a/website/static/css/styles.css
+++ b/website/static/css/styles.css
@@ -1,6 +1,6 @@
 body {
     font-family: 'Times New Roman', Times, serif;
-    background-color: #ede8d0; /* Beige background */
+    background-color: #cfcbb7; /* Beige background */
     color: #5b3e31; /* Dark brown text */
     margin: 0;
     padding: 0;
