--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -16,7 +16,7 @@
     />
 
     <!-- Link to style CSS file -->
-    <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
     <style>
         .navbar-custom {
             background-color: #5b3e31;
