--- a/website/templates/view_all_tasks.html
+++ b/website/templates/view_all_tasks.html
@@ -1,5 +1,9 @@
 {% extends "base.html" %}
 
+{% block extra_css %}
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/alltask.css') }}">
+{% endblock %}
+
 {% block title %}
     View All Tasks
 {% endblock %}
