--- a/website/static/css/createTasks.css
+++ b/website/static/css/createTasks.css
@@ -110,9 +110,10 @@ body {
 }
 
 .hero-section img {
-    max-width: 100%;
-    height: auto;
-    max-height: 300px;
-    z-index: 2;
+    width: 250px; /* Set a fixed width */
+    height: 250px; /* Set a fixed height to make it a square */
+    border-radius: 50%; /* Create a circular shape */
+    object-fit: cover; /* Ensure the image covers the circle area */
+    z-index: 1;
     position: relative;
 }
