--- a/website/templates/login.html
+++ b/website/templates/login.html
@@ -1,28 +1,42 @@
-{% extends "base.html" %} {% block title %}Login{% endblock %}
+{% extends "base.html" %}
+{% block title %}Login{% endblock %}
+
+{% block extra_css %}
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/login.css') }}">
+{% endblock %}
 
 {% block content %}
-<form method="POST">
-    <h3 align="center">Login</h3>
-    <div class="form-group">
-        <label for="email">Email Address</label>
-        <input 
-            type="email" 
-            class="form-control" 
-            id="email" 
-            name="email" 
-            placeholder="Enter email">
+<div class="container">
+    <div class="image-container left-image-container">
+        <img src="https://i.pinimg.com/474x/ca/f1/49/caf14955254bb5f67c4f781a385b5355.jpg" class="side-image left-image" alt="Left Image">
     </div>
-    <div class="form-group">
-        <label for="password">Password</label>
-        <input 
-            type="password" 
-            class="form-control" 
-            id="password" 
-            name="password" 
-            placeholder="Enter password">
+    <div class="login-wrapper">
+        <form method="POST" class="login-form">
+            <h3>Login</h3>
+            <div class="form-group">
+                <label for="email">Email Address</label>
+                <input 
+                    type="email" 
+                    class="form-control" 
+                    id="email" 
+                    name="email" 
+                    placeholder="Enter email">
+            </div>
+            <div class="form-group">
+                <label for="password">Password</label>
+                <input 
+                    type="password" 
+                    class="form-control" 
+                    id="password" 
+                    name="password" 
+                    placeholder="Enter password">
+            </div>
+            <br />
+            <button type="submit" class="btn custom-button">Login</button>
+        </form>
     </div>
-    <br />
-    <button type="submit" class="btn btn-primary">Login</button>
-</form>
-{{ text }}
+    <div class="image-container right-image-container">
+        <img src="https://i.pinimg.com/564x/00/b3/b8/00b3b8e05007f8c0d83234ce5009cb74.jpg" class="side-image right-image" alt="Right Image">
+    </div>
+</div>
 {% endblock %}
