--- a/website/templates/view_tasks.html
+++ b/website/templates/view_tasks.html
@@ -2,12 +2,13 @@
 
 {% block title %}View Tasks{% endblock %}
 {% block extra_css %}
-    <link rel="stylesheet" href="{{ url_for('static', filename='viewtask.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/viewtask.css') }}">
 {% endblock %}
 
 {% block content %}
     <div class="header">
         <h1>Your Tasks</h1>
+        <img src="{{ url_for('static', filename='images/bearview.jpg') }}" alt="Custom Image" class="header-image">
     </div>
 
     <div class="hero-section">
@@ -43,6 +44,7 @@
             {% endif %}
         </div>
     </div>
+
 {% endblock %}
 
 {% block extra_js %}
