--- a/website/templates/create_task.html
+++ b/website/templates/create_task.html
@@ -32,7 +32,7 @@
                     class="form-control" 
                     id="frequency" 
                     name="frequency" 
-                    placeholder="Enter task frequency (Weekly, Monthly)"
+                    placeholder="Enter task frequency (Daily, Weekly, Fortnightly, Monthly)"
                     required>
             </div>
             
