--- a/website/templates/task_allocation.html
+++ b/website/templates/task_allocation.html
@@ -19,6 +19,7 @@
             <div class="form-group">
                 <label for="frequency">Select Task Frequency</label>
                 <select class="form-control" id="frequency" name="frequency" required>
+                    <option value="Daily">Daily</option>
                     <option value="Weekly">Weekly</option>
                     <option value="Fortnightly">Fortnightly</option>
                     <option value="Monthly">Monthly</option>
